# optimaster

./: .gitignore  Makefile.am  Makefile.am.inc  autogen.sh  ccResolutions  configure.ac  master.supp  optimaster.cc  optimaster.conf  optimaster.conf.ex
Application/: addjob.cc  addjobfromxml1.cc  addjobfromxml2.cc  addjobfromxmlfile.cc  application.cc  application.hh  application.ih  datadirectory.cc  destructor.cc  enableenvironment.cc  failureerror.cc  failuremessage.cc  getfirstchild.cc  hashtoken.cc  invalidjobinvalidjob.cc  invalidjobwhat.cc  job.cc  jobbytoken.cc  jobs.cc  newiteration.cc  ondispatch.cc  ongreeting.cc  onidlework.cc  oninterrupt.cc  onoptimizerbatch.cc  onoptimizerclosed.cc  onworkerchallenge.cc  onworkerfailed.cc  onworkerremoved.cc  onworkerresponse.cc  onworkersuccess.cc  parsearguments.cc  parseboundaries.cc  parseparameters.cc  registerworker.cc  removejob1.cc  removejob2.cc  run.cc  sendwakeup.cc  settingsfromxml.cc
Command/: command.cc  command.hh  command.ih  dataconstructor.cc  datacreateresponse.cc  datahandlejobinfo.cc  datahandlejobprogress.cc  dataondata.cc  dataonnewconnection.cc  dataresponse.cc  datasetiteration.cc  datasetjobinfo.cc  handleaddjob.cc  handlelistjobs.cc  handleremovejob.cc  jobadded.cc  jobremoved.cc  newiteration.cc
Config/: config.cc  config.hh  config.ih  initialize.cc  instance.cc  statics.cc
Dispatcher/: dispatcher.cc  dispatcher.hh  dispatcher.ih
Job/: datadestructor.cc  initializedatabase.cc  job.hh  job.ih  job1.cc  job2.cc
JobQueue/: addsolutionsperjob.cc  inqueue.cc  insert.cc  jobdone.cc  jobqueue.cc  jobqueue.hh  jobqueue.ih  matchitem.cc  pop.cc  queue1.cc  queue2.cc  remove.cc  updateprioritysum.cc
JobQueue/Item/: canovertake.cc  clone.cc  item.cc  item.hh  item.ih  overtake.cc  sequence.cc  sequencedecrease.cc
Managers/Module/: module.hh
Managers/Module/Scanner/: scan1.cc  scan2.cc  scanner.hh  scanner.ih
Managers/Optimizer/: lookup.cc  optimizer.cc  optimizer.hh  optimizer.ih  searchdirectory.cc  searchenvironmentpath.cc
Managers/Optimizer/Extension/: extension.cc  extension.hh  extension.ih  lookup.cc  searchdirectory.cc  searchenvironmentpath.cc
Optimizer/: client.cc  dataonclientdata.cc  id.cc  onbatch.cc  operatorequal.cc  optimizer.hh  optimizer.ih  optimizer1.cc  optimizer2.cc  response.cc
OptimizerManager/: destructor.cc  find.cc  fromdescriptor.cc  listen.cc  onconnectionclosed.cc  onnewconnection.cc  onoptimizerbatch.cc  optimizermanager.cc  optimizermanager.hh  optimizermanager.ih  set.cc
TaskQueue/: empty.cc  insert.cc  pop.cc  queue.cc  queue1.cc  queue2.cc  remove.cc  taskqueue.cc  taskqueue.hh  taskqueue.ih  updateprioritysum.cc
TaskQueue/Task/: canovertake.cc  clone.cc  failed.cc  failures.cc  operatorequal.cc  overtake.cc  sequence.cc  sequence1.cc  sequence2.cc  sequencedecrease.cc  task.hh  task.ih  task1.cc  task2.cc
Worker/: dataondata.cc  dataontimeout.cc  datasetfailure.cc  failed.cc  failures.cc  send.cc  sendjob.cc  worker.hh  worker.ih  worker1.cc  worker2.cc
WorkerPool/: activate.cc  activateworker.cc  active.cc  add.cc  close.cc  dataonworkerclosed.cc  dataonworkerfailed.cc  dataonworkerresponse.cc  dataonworkersuccess.cc  dataremoveworker.cc  dataworkerfinished.cc  specifier.cc  workerpool.cc  workerpool.hh  workerpool.ih
debian/: changelog  control  optimaster.install  rules
docs/: Makefile.am  Makefile.doxygen  doxygen.cfg.in
jobs/: example.xml  psotest.xml  test.xml  toygp.xml
src/: Makefile.am  application.cc  application.hh  batch.cc  batch.hh  command.cc  command.hh  communicator.cc  communicator.hh  config.cc  config.hh  debug.hh  job.cc  job.hh  jobmanager.cc  jobmanager.hh  optimaster.cc  optimizer.cc  optimizer.hh  optimizermanager.cc  optimizermanager.hh  task.cc  task.hh  taskqueue.cc  taskqueue.hh  worker.cc  worker.hh  workermanager.cc  workermanager.hh
